merged several fixes and features from dev to head, see changes in history.txt